# smile-detection-app

./: .gitignore  README.md
backend/: .coverage  README.md  pyproject.toml
backend/app/: logger.py  main.py
backend/app/models/: detection_event.py
backend/app/routes/: camera.py  detect.py
backend/app/services/: camera_manager.py  dlib_smile_detector.py  smile_detector.py
backend/migrations/: 001_create_detections_table.sql
backend/scripts/: batch_smile_detector.py  dlib_smile_batch.py
backend/tests/: test_camera_manager.py  test_camera_routes.py  test_detect.py  test_detection_event.py  test_main.py  test_smile_detector.py
backend/tests/manual/: test_real_smile_detection.py
documents/: SmileDetectionApp.pptx
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  App.test.js  index.css
frontend/src/api/: SmileApi.js  SmileApi.test.js
frontend/src/components/: SmileDetails.js  SmileDetails.test.js  SmileViewer.js  SmileViewer.test.js
