[project]
name = "smile-backend"
version = "0.1.0"
description = "Smile detection backend using FastAPI and OpenCV"
authors = [
    {name = "Manushi manushi.pro4@gmail.com"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.11.4,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "app" }
]
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
